--- a/components/1/component.html
+++ b/components/1/component.html
@@ -10,7 +10,7 @@
 	<!-- Component -->
     
     <nav>
-        <img src="http://placehold.it/200x55" alt="Company Logo">
+        <img src="http://placehold.it/200x55" alt="Fhoke">
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Projects</a></li>
