--- a/components/10/component.html
+++ b/components/10/component.html
@@ -9,12 +9,13 @@
 
 	<!-- Component -->
     <footer>
+        <!-- Will add images of social media with CSS -->
         <ul>
-            <li><a href="#"><img src="http://placehold.it/90x90" alt="Twitter"></a></li>
-            <li><a href="#"><img src="http://placehold.it/90x90" alt="Facebook"></a></li>
-            <li><a href="#"><img src="http://placehold.it/90x90" alt="Rdio"></a></li>
-            <li><a href="#"><img src="http://placehold.it/90x90" alt="Dribble"></a></li>
-            <li><a href="#"><img src="http://placehold.it/90x90" alt="Instagram"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
         </ul>
     </footer>
 
