--- a/components/3/component.html
+++ b/components/3/component.html
@@ -8,44 +8,48 @@
 <body>
 
 	<!-- Component -->
-    <article>
-        <!-- Image will be added using CSS -->
-        <section class="name">
-            <h3>Ryan Vanni</h3>
-            <h4>CEO &#47; Founder</h4>
-        </section>
-        <section class="socialMediaLinks">
-            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
-            <a href="#" title="instagram"><img src="http://placehold.it/50x50" alt="Instagram Icon"></a>
-            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
-        </section>
-    </article>
-    
-    <article>
-        <!-- Image will be added using CSS -->
-        <section class="name">
-            <h3>Robert Reinhard</h3>
-            <h4>CTO</h4>
-        </section>
-        <section class="socialMediaLinks">
-            <a href="#" title="facebook"><img src="http://placehold.it/50x50" alt="Facebook Icon"></a>
-            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
-            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
-            <a href="#" title="github"><img src="http://placehold.it/50x50" alt="Github Icon"></a>
-        </section>
-    </article>
-    
-    <article>
-        <!-- Image will be added using CSS -->
-        <section class="name">
-            <h3>Jeff Toll</h3>
-            <h4>Creative Director</h4>
-        </section>
-        <section class="socialMediaLinks">
-            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
-            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
-        </section>
-    </article>
+   
+    <!-- Socail medai images will be added using CSS -->
+    <section>
+        <article>
+            <img src="http://placehold.it/400x400" alt="Picture of Ryan Vanni">
+            <section class="name">
+                <h3>Ryan Vanni</h3>
+                <h4>CEO &#47; Founder</h4>
+            </section>
+            <ul class="socialMediaLinks">
+                <li><a href="#" title="twitter"></a></li>
+                <li><a href="#" title="instagram"></a></li>
+                <li><a href="#" title="linkedin"></a></li>
+            </ul>
+        </article>
+
+        <article>
+            <img src="http://placehold.it/400x400" alt="Picture of Robert Reinhard">
+            <section class="name">
+                <h3>Robert Reinhard</h3>
+                <h4>CTO</h4>
+            </section>
+            <ul class="socialMediaLinks">
+                <li><a href="#" title="facebook"></a></li>
+                <li><a href="#" title="twitter"></a></li>
+                <li><a href="#" title="linkedin"></a></li>
+                <li><a href="#" title="github"></a>
+            </ul>
+        </article>
+
+        <article>
+            <img src="http://placehold.it/400x400" alt="Picture of Jeff Toll">
+            <section class="name">
+                <h3>Jeff Toll</h3>
+                <h4>Creative Director</h4>
+            </section>
+            <ul class="socialMediaLinks">
+                <li><a href="#" title="twitter"></a></li>
+                <li><a href="#" title="linkedin"></a></li>
+            </ul>
+        </article>
+    </section>
 	<!-- End Component -->
 	
 </body>
