--- a/components/4/component.html
+++ b/components/4/component.html
@@ -8,14 +8,16 @@
 <body>
 
 	<!-- Component -->
-    
-    <!-- Will add images using CSS -->
-    <h2>Keep Playing</h2>
-    <h1>Hip &#38; Joint</h1>
-    <p>Support Healthy Hip &#38; Joint Function</p>
-    <h3>100&#37; USA sourced.</h3>
-    <a href="#">Purchase Now</a>
-
+   
+    <!-- Will add dog image using CSS, use image to create the look of dashed lines -->
+    <section>
+        <h2>Keep Playing</h2>
+        <h1>Hip &#38; Joint</h1>
+        <p>Support Healthy Hip &#38; Joint Function</p>
+        <h3>100&#37; USA sourced.</h3>
+        <img src="http://placehold.it/200x200" alt="Three of our Hip and Joint dog treats. Chicken, beef, and lamb.">
+        <a href="#">Purchase Now</a>
+    </section>
 	<!-- End Component -->
 	
 </body>
