--- a/components/5/component.html
+++ b/components/5/component.html
@@ -9,26 +9,23 @@
 <body>
 
 	<!-- Component -->
-    
-    <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
-    <form>
-        <p>First Name &#42;</p>
-        <input type="text" name="firstName">
+   
+    <section>
+        <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
+        <form>
+            <p><label>First Name &#42;<input type="text" name="firstName"></label></p>
 
-        <p>Last Name &#42;</p>
-        <input type="text" name="lastName">
+            <p><label>Last Name &#42;<input type="text" name="lastName"></label></p>
 
-        <p>Email Address &#42;</p>
-        <input type="email" name="emailAddress">
+            <p><label>Email Address &#42;<input type="email" name="emailAddress"></label></p>
 
-        <p>Message &#42;</p>
-        <textarea cols="40" rows="10" name="message"></textarea>
+            <p><label>Message &#42;<textarea cols="40" rows="10" name="message"></textarea></label></p>
 
-        <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
+            <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
 
-        <button type="submit" value="Send Message">Send Message</button>
-    </form>
-    
+            <p><button type="submit" value="Send Message">Send Message</button></p>
+        </form>
+    </section>
 	<!-- End Component -->
 	
 </body>
