--- a/components/7/component.html
+++ b/components/7/component.html
@@ -8,30 +8,43 @@
 <body>
 
 	<!-- Component -->
-    
-    <img src="http://placehold.it/150x150" alt="Mailchimp">
-    
-    <form>
-        <p>Username</p>
-        <a href="#">I forgot</a>
-        <input type="text" name="username" placeholder="&#42;">
-        <p>Password</p>
-        <a href="#">I forgot</a>
-        <input type="password" name="password" placeholder="&#42;">
-        <label for="showPassword">
-            <input type="checkbox" name="showPassword" id="showPassword">
-            <p>Show</p>
-        </label>
-        <button type="submit" value="log in">Log In</button>
-        <label for="stayLoggedIn">
-            <input type="checkbox" name="stayLoggedIn" id="stayLoggedIn">
-            <p>Stay logged in</p>
-        </label>
-        <a href="#">Create an account</a>
-        <p>&#183;</p>
-        <a href="#">Trouble logging in?</a>
-    </form>
+    <section>
+        <img src="http://placehold.it/150x150" alt="Mailchimp">
+        <!-- add ptag -->
+        <form>
+            <p>
+                Username
+                <a href="#">I forgot</a>
+                <input type="text" name="username" placeholder="&#42;">
+            </p>
 
+            <p>
+                Password
+                <a href="#">I forgot</a>
+                <input type="password" name="password" placeholder="&#42;">
+
+                <label for="showPassword">
+                    <input type="checkbox" name="showPassword" id="showPassword">
+                    Show
+                </label>
+            </p>
+
+            <p><button type="submit" value="log in">Log In</button></p>
+
+            <p>
+                <label for="stayLoggedIn">
+                    <input type="checkbox" name="stayLoggedIn" id="stayLoggedIn">
+                    <p>Stay logged in</p>
+                </label>
+            </p>
+
+            <p>
+                <a href="#">Create an account</a>
+                &#183;
+                <a href="#">Trouble logging in?</a>
+            </p>
+        </form>
+    </section>
 	<!-- End Component -->
 	
 </body>
