--- a/components/9/component.html
+++ b/components/9/component.html
@@ -48,8 +48,10 @@
             <p>2&#58;44 PM</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in tristique sem. Praesent varius sapien id elit volutpat maximus. Phasellus felis purus, condimentum in tempor quis, varius et lectus.</p>
         </section>
-
-        <input type="text" name="comment" placeholder="Add a comment...">
+        
+        <form>
+            <p><input type="text" name="comment" placeholder="Add a comment..."></p>
+        </form>
     </article>
 	<!-- End Component -->
 	
