--- a/components/2/component.html
+++ b/components/2/component.html
@@ -8,32 +8,34 @@
 <body>
 
 	<!-- Component -->
-    
-    <article>
-        <!-- Image will be added using CSS -->
-        <h5>Accept credit cards anywhere</h5>
-        <p>The free Square Reader works with the free Square Register app to allow everyone to take payments on their smartphone or tablet.</p>
-    </article>
+    <section>
+        <article>
+            <!-- Image will be added using CSS -->
+            <h5>Accept credit cards anywhere</h5>
+            <p>The free Square Reader works with the free Square Register app to allow everyone to take payments on their smartphone or tablet.</p>
+        </article>
 
-    <article>
-        <!-- Image will be added using CSS -->
-        <h5>Works with iOS and Android</h5>
-        <p>Square Reader plugs into the standard headset jack of your smartphone or tablet. Never miss a sale again.</p>
-    </article>
+        <article>
+            <!-- Image will be added using CSS -->
+            <h5>Works with iOS and Android</h5>
+            <p>Square Reader plugs into the standard headset jack of your smartphone or tablet. Never miss a sale again.</p>
+        </article>
 
-    <article>
-        <!-- Image will be added using CSS -->
-        <h5>Serious security</h5>
-        <p>Card information is encrypted at the moment of swipe. Square doesn’t store data on your device after a payment has been processed.</p>
-        <!-- Will add arrow using CSS -->
-        <a href="#">Learn About Security</a>
-    </article>
+        <article>
+            <!-- Image will be added using CSS -->
+            <h5>Serious security</h5>
+            <p>Card information is encrypted at the moment of swipe. Square doesn’t store data on your device after a payment has been processed.</p>
+            <!-- Will add arrow using CSS -->
+            <a href="#">Learn About Security</a>
+        </article>
 
-    <article>
-        <!-- Image will be added using CSS -->
-        <h5>Clear pricing, fast deposits</h5>
-        <p>Pay 2.75&#37; per swipe for Visa, MasterCard, Discover, and American Express. Swipe &#36;100, see &#36;97.25 in your bank account in one to two business days.</p>
-    </article>
+        <article>
+            <!-- Image will be added using CSS -->
+            <h5>Clear pricing, fast deposits</h5>
+            <p>Pay 2.75&#37; per swipe for Visa, MasterCard, Discover, and American Express. Swipe &#36;100, see &#36;97.25 in your bank account in one to two business days.</p>
+        </article>
+    </section>
+   
     
 	<!-- End Component -->
 	
