--- a/components/1/component.html
+++ b/components/1/component.html
@@ -2,22 +2,25 @@
 <html>
 <head>
 	<title>WSP Component: Shelby Foegelle</title>
-	<!--<link rel="stylesheet" type="text/css" href="../../css/reset.css" />-->
+	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
     
     <nav>
-        <img src="http://placehold.it/200x55" alt="Fhoke">
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="wrapper">
+            <a href="component.html"><img src="Fhoke_Logo.PNG" alt="Fhoke"></a>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </nav>
     
 	<!-- End Component -->
