--- a/components/2/component.html
+++ b/components/2/component.html
@@ -26,7 +26,7 @@
             <h5>Serious security</h5>
             <p>Card information is encrypted at the moment of swipe. Square doesn’t store data on your device after a payment has been processed.</p>
             <!-- Will add arrow using CSS -->
-            <a href="#">Learn About Security</a>
+            <a href="#">Learn About Security ></a>
         </article>
 
         <article>
