--- a/components/3/component.html
+++ b/components/3/component.html
@@ -12,42 +12,46 @@
     <!-- Socail medai images will be added using CSS -->
     <section>
         <article>
-            <img src="http://placehold.it/400x400" alt="Picture of Ryan Vanni">
-            <section class="name">
+            <div class="image"></div>
+            <img src="RyanVanni.jpg" width="100%" height="100%" alt="Picture of Ryan Vanni">
+            <section class="personInfo">
                 <h3>Ryan Vanni</h3>
                 <h4>CEO &#47; Founder</h4>
+                <hr>
+                <ul class="socialMediaLinks">
+                    <li><a href="#" title="twitter"></a></li>
+                    <li><a href="#" title="instagram"></a></li>
+                    <li><a href="#" title="linkedin"></a></li>
+                </ul>
             </section>
-            <ul class="socialMediaLinks">
-                <li><a href="#" title="twitter"></a></li>
-                <li><a href="#" title="instagram"></a></li>
-                <li><a href="#" title="linkedin"></a></li>
-            </ul>
         </article>
 
         <article>
-            <img src="http://placehold.it/400x400" alt="Picture of Robert Reinhard">
-            <section class="name">
+            <img src="RobertReinhard.jpg" width="100%" height="100%" alt="Picture of Robert Reinhard">
+            <section class="personInfo">
                 <h3>Robert Reinhard</h3>
                 <h4>CTO</h4>
+            
+                <ul class="socialMediaLinks">
+                    <li><a href="#" title="facebook"></a></li>
+                    <li><a href="#" title="twitter"></a></li>
+                    <li><a href="#" title="linkedin"></a></li>
+                    <li><a href="#" title="github"></a>
+                </ul>
             </section>
-            <ul class="socialMediaLinks">
-                <li><a href="#" title="facebook"></a></li>
-                <li><a href="#" title="twitter"></a></li>
-                <li><a href="#" title="linkedin"></a></li>
-                <li><a href="#" title="github"></a>
-            </ul>
         </article>
 
         <article>
-            <img src="http://placehold.it/400x400" alt="Picture of Jeff Toll">
-            <section class="name">
+            <img src="JeffToll.jpg" width="100%" height="100%" alt="Picture of Jeff Toll">
+            <section class="personInfo">
                 <h3>Jeff Toll</h3>
                 <h4>Creative Director</h4>
+            
+                <ul class="socialMediaLinks">
+                    <li><a href="#" title="twitter"></a></li>
+                    <li><a href="#" title="linkedin"></a></li>
+                </ul>
             </section>
-            <ul class="socialMediaLinks">
-                <li><a href="#" title="twitter"></a></li>
-                <li><a href="#" title="linkedin"></a></li>
-            </ul>
         </article>
     </section>
 	<!-- End Component -->
