--- a/components/3/component.html
+++ b/components/3/component.html
@@ -9,21 +9,21 @@
 
 	<!-- Component -->
    
-    <!-- Socail medai images will be added using CSS -->
+    <!-- Social media images will be added using CSS -->
     <section>
         <article>
-            <div class="image"></div>
             <img src="RyanVanni.jpg" width="100%" height="100%" alt="Picture of Ryan Vanni">
             <section class="personInfo">
                 <h3>Ryan Vanni</h3>
                 <h4>CEO &#47; Founder</h4>
-                <hr>
+
                 <ul class="socialMediaLinks">
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="instagram"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
                 </ul>
             </section>
+
         </article>
 
         <article>
@@ -36,7 +36,7 @@
                     <li><a href="#" title="facebook"></a></li>
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
-                    <li><a href="#" title="github"></a>
+                    <li><a href="#" title="github"></a></li>
                 </ul>
             </section>
         </article>
