--- a/components/5/component.css
+++ b/components/5/component.css
@@ -6,3 +6,59 @@ COMPONENT STYLESHEET
 /* HEADER ======================================== */
 
 /* HEADER ======================================== */
+section {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+h4 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #a4ab31;
+}
+
+label {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+}
+
+span {
+    color: #a4ab31;
+}
+
+input, textarea {
+    display: block;
+    width: 100%;
+    color: #444;
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 25px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+}
+
+input {
+    height: 30px;
+}
+
+button {
+    border: solid 1px #a4ab31;
+    background: #fff;
+    color: #a4ab31;
+    padding: 14px 50px;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 600;
+    letter-spacing: 3px;
+}
+
+button:hover {
+    background: #a4ab31;
+    color: #fff;
+    transition: all .4s ease-in-out;
+}
