--- a/components/5/component.html
+++ b/components/5/component.html
@@ -5,6 +5,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="../../css/reset.css" />-->
 	<link rel="stylesheet" type="text/css" href="component.css" />
     <script src='https://www.google.com/recaptcha/api.js'></script>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -13,13 +14,13 @@
     <section>
         <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
         <form>
-            <p><label>First Name &#42;<input type="text" name="firstName"></label></p>
+            <p><label>First Name <span>&#42;</span><input type="text" name="firstName"></label></p>
 
-            <p><label>Last Name &#42;<input type="text" name="lastName"></label></p>
+            <p><label>Last Name <span>&#42;</span><input type="text" name="lastName"></label></p>
 
-            <p><label>Email Address &#42;<input type="email" name="emailAddress"></label></p>
+            <p><label>Email Address <span>&#42;</span><input type="email" name="emailAddress"></label></p>
 
-            <p><label>Message &#42;<textarea cols="40" rows="10" name="message"></textarea></label></p>
+            <p><label>Message <span>&#42;</span><textarea cols="40" rows="5" name="message"></textarea></label></p>
 
             <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
 
