--- a/components/6/component.css
+++ b/components/6/component.css
@@ -6,3 +6,72 @@ COMPONENT STYLESHEET
 /* HEADER ======================================== */
 
 /* HEADER ======================================== */
+body {
+    font-family: sans-serif;
+}
+
+header {
+    max-width: 600px;
+    margin: 0 auto;
+    border-bottom: 1px solid #444;
+    text-align: center;
+}
+
+header h1 {
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 70px;
+    margin: 0;
+}
+
+header h2 {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 19px;
+    margin: -10px 0 1px 0;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #444;
+}
+
+article {
+    max-width: 525px;
+    margin: 10px auto;
+    text-align: center;
+    font-size: 13px;
+    padding: 10px 0;
+}
+
+article:nth-child(3) {
+    border-top: 1px dashed #ccc;
+    border-bottom: 1px dashed #ccc;
+    padding-bottom: 50px;
+    margin-top: 40px;
+}
+
+a {
+    text-decoration: none;
+    color: #111;
+}
+
+p a {
+    color: #0e6ad3;
+}
+
+article h3 {
+    font-family: serif;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 10px 0 -10px 0;
+}
+
+blockquote {
+    text-align: justify;
+    line-height: 18px;
+}
+
+article > a:last-child {
+    color: #0e6ad3;
+    float: right;
+    padding-top: 10px;
+    margin-right: 30px;
+}
