--- a/components/7/component.css
+++ b/components/7/component.css
@@ -6,3 +6,152 @@ COMPONENT STYLESHEET
 /* HEADER ======================================== */
 
 /* HEADER ======================================== */
+section {
+    max-width: 500px;
+    min-width: 315px;
+    margin: 0 auto;
+    font-family: "Helvetica", sans-serif;
+    font-size: 16px;
+}
+
+a {
+    color: #2c9ab7;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+
+#name input {
+    display: block;
+    width: 97%;
+    padding: 6px;
+    margin-top: 10px;
+    border: 2px solid #ccc;
+    border-radius: 2px;
+}
+
+#name a {
+    float: right;
+    text-decoration: none;
+}
+
+#password a {
+    float: right;
+    text-decoration: none;
+}
+
+#password input:nth-child(2) {
+    margin-top: 10px;
+    display: inline-block;
+    width: 70%;
+    padding: 7px;
+    border: 2px solid #ccc;
+    border-radius: 2px;
+    line-height: 10px;
+}
+
+#password label:nth-child(1) {
+    display: block;
+}
+
+#password label:nth-child(3) {
+    vertical-align: middle;
+    border: 2px solid #ccc;
+    border-radius: 2px;
+    padding: 6px 5% 6px 6%;
+    line-height: 10px;
+    margin-left: -6px;
+    background-color: #e0e0e0;
+}
+
+#password label input {
+    display: inline;
+    margin-top: -1px;
+    width: 22px;
+    height: 22px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+button {
+    background-color: #737373;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
+    padding: 0 19%;
+    margin: 10px 18px 0 0;
+    border: 0 none;
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 16px;
+    height: 50px;
+    float: left;
+}
+
+button:hover {
+    background-color: #666;
+    cursor: pointer;
+}
+
+#logged label:nth-child(1) {
+    vertical-align: middle;
+    border-radius: 2px;
+    padding: 15px 9%;
+    margin-top: 10px;
+    height: 21px;
+    line-height: 10px;
+    background-color: #e0e0e0;
+    float: right;
+}
+
+#logged label input {
+    display: inline;
+    margin-top: -1px;
+    width: 22px;
+    height: 22px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+#extras {
+    clear: both;
+    padding-top: 30px;
+    text-align: center;
+    width: 103%;
+}
+
+#extras a {
+    text-decoration: none;
+    border-bottom: 1px solid #2c9ab7;
+}
+
+@media (max-width: 475px) {
+    section {
+        font-size: 14px;
+    }
+    
+    button {
+        padding: 0 16%;
+    }
+    
+    #logged label:nth-child(1) {
+        padding: 15px 7%;
+    }
+}
+
+@media (max-width: 380px) {
+    button {
+        padding: 0 12%;
+    }
+    
+    #logged label:nth-child(1) {
+        padding: 15px 1%;
+    }
+    
+    #password label:nth-child(3) {
+        padding: 6px 1% 6px 1%;
+    }
+}
