--- a/components/8/component.html
+++ b/components/8/component.html
@@ -4,12 +4,13 @@
 	<title>WSP Component: Shelby Foegelle</title>
 	<!--<link rel="stylesheet" type="text/css" href="../../css/reset.css" />-->
 	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
     <section>
-        <img src="http://placehold.it/900x500" alt="Map of our office location">
+        <img src="map.PNG" alt="Map of our office location">
         <!-- logo image will be added using css -->
         <h3>Creative <span>Department</span></h3>
         <p>1132 Main Street, OTR</p>
