--- a/components/9/component.html
+++ b/components/9/component.html
@@ -4,6 +4,7 @@
 	<title>WSP Component: Shelby Foegelle</title>
 	<!--<link rel="stylesheet" type="text/css" href="../../css/reset.css" />-->
 	<link rel="stylesheet" type="text/css" href="component.css" />
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -11,35 +12,34 @@
     <article>
         <section>
             <a href="#"><p>What's Hot and Recommended</p></a>
-            <a href="#"><img src="http://placehold.it/16x16" alt="What's Hot"></a>   
+            <a href="#"></a>   
         </section>
 
         <section>
             <a href="#"><img src="http://placehold.it/50x50" alt="Profile Picture"></a>
             <h4><a href="#">Rohit Surya</a></h4>
-            <p><a href="#">Shared publicly</a> &#183; <a href="#">1&#58;03 PM</a></p>    
+            <p><a href="#">Shared publicly</a> - <a href="#">1&#58;03 PM</a></p>    
         </section>
 
         <section>
             <p>For the past week I have been having some fun using <a href="#">+VSCO</a> app on my phone. The workflow is pretty simple. NFC the fine jpeg images from my camera to phone and edit. On this shit I used the A1 filter and tweaked it. Also bought the limited edition. Pretty neat set up.</p>
             <a href="#">Read more (44 lines)</a>
-            <a href="#"><img src="http://placehold.it/400x300" alt="Posted Image"></a>
+            <a href="#"><img src="http://placehold.it/440x300" alt="Posted Image"></a>
         </section>
 
         <section>
-            <button type="button">&#43;86</button>
-            <!-- will add image of arrow in future -->
-            <button type="button">→5</button>
+            <button type="button">+ 86</button>
+            <button type="button">→ 5</button>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
         </section>
-
+    </article>        
+    <article>
         <section>
             <a href="#">10 Comments</a>
-            <!-- will add image of down arrow in future -->
-            <a href="#">v</a>
+            <a href="#"></a>
         </section>
 
         <section>
@@ -52,7 +52,7 @@
         <form>
             <p><input type="text" name="comment" placeholder="Add a comment..."></p>
         </form>
-    </article>
+    </article>    
 	<!-- End Component -->
 	
 </body>
