--- a/components/9/component.css
+++ b/components/9/component.css
@@ -6,3 +6,137 @@ COMPONENT STYLESHEET
 /* HEADER ======================================== */
 
 /* HEADER ======================================== */
+body {
+    background-color: #e5e5e5
+}
+
+article {
+    max-width: 440px;
+    padding: 0 15px;
+    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
+    background-color: #fff;
+    font-size: 13px;
+    border: 1px solid #e5e5e5;
+}
+
+a {
+    text-decoration: none;
+    color: #999;
+}
+
+article:nth-child(1) section:nth-child(1) {
+    overflow: hidden;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+section:nth-child(1) a:nth-child(1){
+    float: left;
+}
+
+article:nth-child(1) section:nth-child(1) a:nth-child(2){
+    float: right;
+    background: no-repeat url(icons.png) -203px -13px;
+    width: 16px;
+    height: 16px;
+    margin-top: 15px;
+}
+
+section:nth-child(2) {
+    clear: both;
+}
+
+section:nth-child(2) img {
+    float: left;
+}
+
+section:nth-child(2) h4 {
+    margin-bottom: -10px;
+}
+
+section:nth-child(2) h4 a {
+    font-weight: bold;
+    color: #111;
+    padding-left: 12px;
+}
+
+section:nth-child(2) p {
+    color: #999;
+}
+
+section:nth-child(2) p a {
+    margin-top: 40px;
+    padding: 0 3px 0 12px;
+    font-size: 12px;
+}
+
+section:nth-child(2) a:nth-child(2){
+    padding-left: 3px;
+}
+
+section:nth-child(3) {
+    margin-top: 25px;
+}
+
+section:nth-child(3) a:nth-child(1) {
+    color: #111;
+    font-weight: bold;
+}
+
+section:nth-child(3) p {
+    margin-bottom: 4px;
+}
+
+section:nth-child(3) img {
+    padding-top: 20px;
+    width: 104%;
+    margin-left: -9px;
+}
+
+section:nth-child(4) {
+    overflow: hidden;
+    padding: 18px 0;
+}
+
+section:nth-child(4) button {
+    border-radius: 3px;
+    background-color: #fff;
+    border: 1px solid #d9d9d9;
+    cursor: pointer;
+    float: left;
+    height: 28px;
+    line-height: 28px;
+    margin-left: 8px;
+    padding: 0 15px;
+    outline: none;
+    width: auto;
+}
+
+section:nth-child(4) img {
+    float: right;
+    padding: 0 3px;
+}
+
+section:nth-child(5) {
+    clear: both;
+}
+
+article:nth-child(2) {
+    background-color: #eee;
+    padding-top: 15px;
+    
+}
+
+article:nth-child(2) section:nth-child(1) a{
+    color: #111;
+}
+
+article:nth-child(2) section:nth-child(1) a:nth-child(2){
+    background: no-repeat url(icons.png) -347px -164px;
+    height: 16px;
+    float: left;
+    width: 16px;
+    margin: 1px 0 0 4px;
+}
+
+
