--- a/components/3/component.html
+++ b/components/3/component.html
@@ -10,20 +10,19 @@
 	<!-- Component -->
    
     <!-- Social media images will be added using CSS -->
-    <section>
+    <section id="container">
         <article>
-            <img src="RyanVanni.jpg" width="100%" height="100%" alt="Picture of Ryan Vanni">
+            <img src="RyanVanni.jpg" width="100%" height="100%" alt="Picture of Ryan Vanni">        
             <section class="personInfo">
                 <h3>Ryan Vanni</h3>
                 <h4>CEO &#47; Founder</h4>
-
+                <hr>
                 <ul class="socialMediaLinks">
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="instagram"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
                 </ul>
             </section>
-
         </article>
 
         <article>
@@ -31,7 +30,7 @@
             <section class="personInfo">
                 <h3>Robert Reinhard</h3>
                 <h4>CTO</h4>
-            
+                <hr>
                 <ul class="socialMediaLinks">
                     <li><a href="#" title="facebook"></a></li>
                     <li><a href="#" title="twitter"></a></li>
@@ -46,7 +45,7 @@
             <section class="personInfo">
                 <h3>Jeff Toll</h3>
                 <h4>Creative Director</h4>
-            
+                <hr>
                 <ul class="socialMediaLinks">
                     <li><a href="#" title="twitter"></a></li>
                     <li><a href="#" title="linkedin"></a></li>
