--- a/components/9/component.css
+++ b/components/9/component.css
@@ -26,6 +26,10 @@ a {
     color: #999;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 article:nth-child(1) section:nth-child(1) {
     overflow: hidden;
     border-bottom: 1px solid #e5e5e5;
